feat(core): implement domain, services, adapters, and strategies for User, Employee, and Customer management
- Domain Models:
  - Added Category, Customer, CustomerProfileData, Review
  - Added Employee, EmployeeProfileData
  - Added User, UserProfileData, Role, ErrorResponse
  - Added custom exceptions: BaseException, UserAlreadyExistsException, UserNotFoundException, CustomerDataRequiredException, EmployeeDataRequiredException, UserProfileAlreadyCompletedException

- Services & Ports:
  - Added UserService, EmployeeService
  - Added input/output ports for User and Employee
  - Added CompleteProfileCommand

- Strategy Patterns:
  - Profile creation, update, and validation strategies for Customer and Employee
  - Factories for creation, update, and validation strategies

- Infrastructure / Adapters:
  - REST controllers: UserRestAdapterController
  - Exception handler: ApiExceptionHandler
  - Input request/response models for User, Employee, Customer
  - Persistence adapters and repositories for User and Employee
  - Mappers for persistence and REST layers
  - Security and authentication configuration
  - Annotations: MaskData, ProtectDataSerializer
  - Profile strategy configuration classes

- Utilities:
  - Added ErrorCatalog
  - Removed unused .gitkeep files

- Build & Config:
  - Modified build.gradle
  - Updated application.yml

- Tests:
  - Added UserServiceTest

--- a/build.gradle
+++ b/build.gradle
@@ -1,35 +1,59 @@
 plugins {
-	id 'java'
-	id 'org.springframework.boot' version '3.5.4'
-	id 'io.spring.dependency-management' version '1.1.7'
+    id 'java'
+    id 'org.springframework.boot' version '3.5.4'
+    id 'io.spring.dependency-management' version '1.1.7'
 }
 
 group = 'com.servi'
 version = '0.0.1-SNAPSHOT'
 
 java {
-	toolchain {
-		languageVersion = JavaLanguageVersion.of(21)
-	}
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(21)
+    }
 }
 
 repositories {
-	mavenCentral()
+    mavenCentral()
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-actuator'
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'org.springframework.boot:spring-boot-starter-security'
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.projectlombok:lombok:1.18.36'
-	developmentOnly 'org.springframework.boot:spring-boot-devtools'
-	runtimeOnly 'org.postgresql:postgresql'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testImplementation 'org.springframework.security:spring-security-test'
-	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+    // Spring Boot core
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+
+    // Lombok
+    implementation 'org.projectlombok:lombok:1.18.36'
+    annotationProcessor 'org.projectlombok:lombok:1.18.36'
+
+    // MapStruct
+    implementation 'org.mapstruct:mapstruct:1.6.2'
+    annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.2'
+    annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
+
+    // Validación
+    implementation 'jakarta.validation:jakarta.validation-api:3.1.0'
+    implementation 'org.hibernate:hibernate-validator:8.0.2.Final'
+
+    // JWT
+    implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
+    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
+    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'
+
+    // Base de datos
+    runtimeOnly 'org.postgresql:postgresql'
+
+    // Desarrollo
+    developmentOnly 'org.springframework.boot:spring-boot-devtools'
+
+    // Tests
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.springframework.security:spring-security-test'
+    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
 tasks.named('test') {
-	useJUnitPlatform()
+    useJUnitPlatform()
 }
